// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariablesOps exportVariable() 1: Export variable1 1`] = `
{
  "meta": Any<Object>,
  "variables": {
    "esv-frodo-test-variable-1": {
      "_id": "esv-frodo-test-variable-1",
      "description": "description1",
      "expressionType": "string",
      "lastChangeDate": "2023-10-24T17:40:50.223Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": false,
      "value": "value1",
      "valueBase64": "dmFsdWUx",
    },
  },
}
`;

exports[`VariablesOps exportVariable() 2: Export variable2 without decoding 1`] = `
{
  "meta": Any<Object>,
  "variables": {
    "esv-frodo-test-variable-2": {
      "_id": "esv-frodo-test-variable-2",
      "description": "description2",
      "expressionType": "int",
      "lastChangeDate": "2023-10-24T17:40:54.286Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": false,
      "valueBase64": "NDI=",
    },
  },
}
`;

exports[`VariablesOps exportVariables() 1: Export all variables 1`] = `
{
  "meta": Any<Object>,
  "variables": {
    "esv-blue-piller": {
      "_id": "esv-blue-piller",
      "description": "Zion membership criteria.",
      "expressionType": "bool",
      "lastChangeDate": "2023-07-18T22:21:38.640Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "value": "false",
      "valueBase64": "ZmFsc2U=",
    },
    "esv-frodo-test-variable-1": {
      "_id": "esv-frodo-test-variable-1",
      "description": "description1",
      "expressionType": "string",
      "lastChangeDate": "2023-10-24T17:40:50.223Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": false,
      "value": "value1",
      "valueBase64": "dmFsdWUx",
    },
    "esv-frodo-test-variable-2": {
      "_id": "esv-frodo-test-variable-2",
      "description": "description2",
      "expressionType": "int",
      "lastChangeDate": "2023-10-24T17:40:54.286Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": false,
      "value": "42",
      "valueBase64": "NDI=",
    },
    "esv-ipv4-cidr-access-rules": {
      "_id": "esv-ipv4-cidr-access-rules",
      "description": "IPv4 CIDR access rules:
{
  "allow": [
    "address/mask"
  ]
}",
      "expressionType": "",
      "lastChangeDate": "2022-08-25T22:54:28.551Z",
      "lastChangedBy": "8efaa5b6-8c98-4489-9b21-ee41f5589ab7",
      "loaded": true,
      "value": "{  "allow": [    "150.128.0.0/16",    "139.35.0.0/16",    "101.216.0.0/16",    "99.72.28.182/32"  ]}",
      "valueBase64": "eyAgImFsbG93IjogWyAgICAiMTUwLjEyOC4wLjAvMTYiLCAgICAiMTM5LjM1LjAuMC8xNiIsICAgICIxMDEuMjE2LjAuMC8xNiIsICAgICI5OS43Mi4yOC4xODIvMzIiICBdfQ==",
    },
    "esv-nebuchadnezzar-crew": {
      "_id": "esv-nebuchadnezzar-crew",
      "description": "The crew of the Nebuchadnezzar hovercraft.",
      "expressionType": "array",
      "lastChangeDate": "2023-07-18T21:59:58.974Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "value": "["Morpheus","Trinity","Link","Tank","Dozer","Apoc","Cypher","Mouse","Neo","Switch"]",
      "valueBase64": "WyJNb3JwaGV1cyIsIlRyaW5pdHkiLCJMaW5rIiwiVGFuayIsIkRvemVyIiwiQXBvYyIsIkN5cGhlciIsIk1vdXNlIiwiTmVvIiwiU3dpdGNoIl0=",
    },
    "esv-nebuchadnezzar-crew-structure": {
      "_id": "esv-nebuchadnezzar-crew-structure",
      "description": "The structure of the crew of the Nebuchadnezzar hovercraft.",
      "expressionType": "object",
      "lastChangeDate": "2023-07-18T22:09:54.630Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "value": "{"Captain":"Morpheus","FirstMate":"Trinity","Operator":["Link","Tank"],"Medic":"Dozer","Crewmen":["Apoc","Cypher","Mouse","Neo","Switch"]}",
      "valueBase64": "eyJDYXB0YWluIjoiTW9ycGhldXMiLCJGaXJzdE1hdGUiOiJUcmluaXR5IiwiT3BlcmF0b3IiOlsiTGluayIsIlRhbmsiXSwiTWVkaWMiOiJEb3plciIsIkNyZXdtZW4iOlsiQXBvYyIsIkN5cGhlciIsIk1vdXNlIiwiTmVvIiwiU3dpdGNoIl19",
    },
    "esv-neo-age": {
      "_id": "esv-neo-age",
      "description": "Neo's age in the matrix.",
      "expressionType": "int",
      "lastChangeDate": "2023-07-18T22:21:23.578Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "value": "28",
      "valueBase64": "Mjg=",
    },
    "esv-test-var": {
      "_id": "esv-test-var",
      "description": "this is a test description",
      "expressionType": "",
      "lastChangeDate": "2022-09-02T04:23:56.075Z",
      "lastChangedBy": "8efaa5b6-8c98-4489-9b21-ee41f5589ab7",
      "loaded": true,
      "value": "this is a test variable",
      "valueBase64": "dGhpcyBpcyBhIHRlc3QgdmFyaWFibGU=",
    },
    "esv-test-var-1": {
      "_id": "esv-test-var-1",
      "description": "test var one",
      "expressionType": "string",
      "lastChangeDate": "2023-08-09T17:42:41.684Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "value": "test var 1 value2",
      "valueBase64": "dGVzdCB2YXIgMSB2YWx1ZTI=",
    },
    "esv-test-var-2": {
      "_id": "esv-test-var-2",
      "description": "A temporary test variable",
      "expressionType": "string",
      "lastChangeDate": "2023-08-02T21:09:01.847Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "value": "testval",
      "valueBase64": "dGVzdHZhbA==",
    },
    "esv-test-var-3": {
      "_id": "esv-test-var-3",
      "description": "This is a test variable",
      "expressionType": "int",
      "lastChangeDate": "2023-10-17T22:22:52.023Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "value": "42",
      "valueBase64": "NDI=",
    },
    "esv-test-var-pi": {
      "_id": "esv-test-var-pi",
      "description": "This is another test variable.",
      "expressionType": "number",
      "lastChangeDate": "2023-10-17T22:28:44.529Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "value": "3.1415926",
      "valueBase64": "My4xNDE1OTI2",
    },
    "esv-test-var-pi-string": {
      "_id": "esv-test-var-pi-string",
      "description": "This is another test variable.",
      "expressionType": "string",
      "lastChangeDate": "2023-10-18T22:05:30.300Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "value": "3.1415926",
      "valueBase64": "My4xNDE1OTI2",
    },
    "esv-trinity-phone": {
      "_id": "esv-trinity-phone",
      "description": "In the opening of The Matrix (1999), the phone number Trinity is calling from is traced to (312)-555-0690",
      "expressionType": "string",
      "lastChangeDate": "2023-07-18T20:33:28.922Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "value": "(312)-555-0690",
      "valueBase64": "KDMxMiktNTU1LTA2OTA=",
    },
    "esv-volkerstestvariable1": {
      "_id": "esv-volkerstestvariable1",
      "description": "variable created for api testing",
      "expressionType": "",
      "lastChangeDate": "2022-11-30T00:13:52.478Z",
      "lastChangedBy": "10ecab02-f357-4522-bc17-dfcc64744064",
      "loaded": true,
      "value": "for jest",
      "valueBase64": "Zm9yIGplc3Q=",
    },
  },
}
`;

exports[`VariablesOps exportVariables() 2: Export all variables without decoding 1`] = `
{
  "meta": Any<Object>,
  "variables": {
    "esv-blue-piller": {
      "_id": "esv-blue-piller",
      "description": "Zion membership criteria.",
      "expressionType": "bool",
      "lastChangeDate": "2023-07-18T22:21:38.640Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "valueBase64": "ZmFsc2U=",
    },
    "esv-frodo-test-variable-1": {
      "_id": "esv-frodo-test-variable-1",
      "description": "description1",
      "expressionType": "string",
      "lastChangeDate": "2023-10-24T17:40:50.223Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": false,
      "valueBase64": "dmFsdWUx",
    },
    "esv-frodo-test-variable-2": {
      "_id": "esv-frodo-test-variable-2",
      "description": "description2",
      "expressionType": "int",
      "lastChangeDate": "2023-10-24T17:40:54.286Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": false,
      "valueBase64": "NDI=",
    },
    "esv-ipv4-cidr-access-rules": {
      "_id": "esv-ipv4-cidr-access-rules",
      "description": "IPv4 CIDR access rules:
{
  "allow": [
    "address/mask"
  ]
}",
      "expressionType": "",
      "lastChangeDate": "2022-08-25T22:54:28.551Z",
      "lastChangedBy": "8efaa5b6-8c98-4489-9b21-ee41f5589ab7",
      "loaded": true,
      "valueBase64": "eyAgImFsbG93IjogWyAgICAiMTUwLjEyOC4wLjAvMTYiLCAgICAiMTM5LjM1LjAuMC8xNiIsICAgICIxMDEuMjE2LjAuMC8xNiIsICAgICI5OS43Mi4yOC4xODIvMzIiICBdfQ==",
    },
    "esv-nebuchadnezzar-crew": {
      "_id": "esv-nebuchadnezzar-crew",
      "description": "The crew of the Nebuchadnezzar hovercraft.",
      "expressionType": "array",
      "lastChangeDate": "2023-07-18T21:59:58.974Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "valueBase64": "WyJNb3JwaGV1cyIsIlRyaW5pdHkiLCJMaW5rIiwiVGFuayIsIkRvemVyIiwiQXBvYyIsIkN5cGhlciIsIk1vdXNlIiwiTmVvIiwiU3dpdGNoIl0=",
    },
    "esv-nebuchadnezzar-crew-structure": {
      "_id": "esv-nebuchadnezzar-crew-structure",
      "description": "The structure of the crew of the Nebuchadnezzar hovercraft.",
      "expressionType": "object",
      "lastChangeDate": "2023-07-18T22:09:54.630Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "valueBase64": "eyJDYXB0YWluIjoiTW9ycGhldXMiLCJGaXJzdE1hdGUiOiJUcmluaXR5IiwiT3BlcmF0b3IiOlsiTGluayIsIlRhbmsiXSwiTWVkaWMiOiJEb3plciIsIkNyZXdtZW4iOlsiQXBvYyIsIkN5cGhlciIsIk1vdXNlIiwiTmVvIiwiU3dpdGNoIl19",
    },
    "esv-neo-age": {
      "_id": "esv-neo-age",
      "description": "Neo's age in the matrix.",
      "expressionType": "int",
      "lastChangeDate": "2023-07-18T22:21:23.578Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "valueBase64": "Mjg=",
    },
    "esv-test-var": {
      "_id": "esv-test-var",
      "description": "this is a test description",
      "expressionType": "",
      "lastChangeDate": "2022-09-02T04:23:56.075Z",
      "lastChangedBy": "8efaa5b6-8c98-4489-9b21-ee41f5589ab7",
      "loaded": true,
      "valueBase64": "dGhpcyBpcyBhIHRlc3QgdmFyaWFibGU=",
    },
    "esv-test-var-1": {
      "_id": "esv-test-var-1",
      "description": "test var one",
      "expressionType": "string",
      "lastChangeDate": "2023-08-09T17:42:41.684Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "valueBase64": "dGVzdCB2YXIgMSB2YWx1ZTI=",
    },
    "esv-test-var-2": {
      "_id": "esv-test-var-2",
      "description": "A temporary test variable",
      "expressionType": "string",
      "lastChangeDate": "2023-08-02T21:09:01.847Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "valueBase64": "dGVzdHZhbA==",
    },
    "esv-test-var-3": {
      "_id": "esv-test-var-3",
      "description": "This is a test variable",
      "expressionType": "int",
      "lastChangeDate": "2023-10-17T22:22:52.023Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "valueBase64": "NDI=",
    },
    "esv-test-var-pi": {
      "_id": "esv-test-var-pi",
      "description": "This is another test variable.",
      "expressionType": "number",
      "lastChangeDate": "2023-10-17T22:28:44.529Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "valueBase64": "My4xNDE1OTI2",
    },
    "esv-test-var-pi-string": {
      "_id": "esv-test-var-pi-string",
      "description": "This is another test variable.",
      "expressionType": "string",
      "lastChangeDate": "2023-10-18T22:05:30.300Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "valueBase64": "My4xNDE1OTI2",
    },
    "esv-trinity-phone": {
      "_id": "esv-trinity-phone",
      "description": "In the opening of The Matrix (1999), the phone number Trinity is calling from is traced to (312)-555-0690",
      "expressionType": "string",
      "lastChangeDate": "2023-07-18T20:33:28.922Z",
      "lastChangedBy": "b672336b-41ef-428d-ae4a-e0c082875377",
      "loaded": true,
      "valueBase64": "KDMxMiktNTU1LTA2OTA=",
    },
    "esv-volkerstestvariable1": {
      "_id": "esv-volkerstestvariable1",
      "description": "variable created for api testing",
      "expressionType": "",
      "lastChangeDate": "2022-11-30T00:13:52.478Z",
      "lastChangedBy": "10ecab02-f357-4522-bc17-dfcc64744064",
      "loaded": true,
      "valueBase64": "Zm9yIGplc3Q=",
    },
  },
}
`;
